site/wizard/css/wizard.css
html, body { height: 100%; width: 100%; margin: 0;}

body {
 font-family: SelawikRegular, sans-serif;
}
#wrapper {
    width: 95%;
    min-width: 985px;
    height: calc(100% - 120px);
    min-height: 652px;
    margin: 0 auto;
    border: 0.75px solid #333;
    border-radius: 5px;
    vertical-align:top;
}

.wizard-step {
    width: 64px !important;
    height: 64px;
    font-size: 36px !important;
    border-radius: 50%;
    border: 2px solid #369;
    display: inline-block;
    color: #369;
    text-align: center;
    
    margin-top: 0px;
    padding-top: 4px;
    text-indent: -0.5px;
    position: relative;
    z-index: 3;
    background: #FFF;
}



.wizard-step-wrapper {
  height: 108px;
  width: 128px;
  margin: 0 auto;
}

.wizard-step-wrapper:hover > * {
    cursor: pointer;
    color: #090;
    border-color: #090 !important;
    
}
.wizard-step-wrapper:hover > * {
    background: #090 !important;
    color: #FFF !important;
    position: relative;
    z-index: 3;
}

.wizard-step-text {
  
  margin-top: -2px;
  height: 16px;
  border-radius: 5px;
  border: 2px solid #369;
  background: #FFF;
  height: 20px;
  font-size: 12px;
    line-height: 18px;
    text-align: center;
    z-index: 4;
    position: relative;
}

.wizard-step.active,.wizard-step-text.active {
    color: #EEE;
    background: #369;
    border-color: #369;
}

.wizard-line {
    border: none;
    border-right: 3px solid #369;
    width: 48px;
    display: inline-block;
    margin-top: -28px;
    margin-left: -47px;
    height: 48px;
    z-index: 0;
    position: absolute;
}


.done {
    color: #9BE !important;
    border-color: #9BE !important;
}


.btn-sm {
  padding: 0px 3px 0px 3px !important;
  line-height: 1.25 !important;
}

.loader,
.loader:before,
.loader:after {
  background: #000d50;
  -webkit-animation: load1 1s infinite ease-in-out;
  animation: load1 1s infinite ease-in-out;
  width: 1em;
  height: 4em;
}
.loader {
  color: #000d50;
  text-indent: -9999em;
  margin: 88px auto;
  position: relative;
  font-size: 11px;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-animation-delay: -0.16s;
  animation-delay: -0.16s;
}
.loader:before,
.loader:after {
  position: absolute;
  top: 0;
  content: '';
}
.loader:before {
  left: -1.5em;
  -webkit-animation-delay: -0.32s;
  animation-delay: -0.32s;
}
.loader:after {
  left: 1.5em;
}
@-webkit-keyframes load1 {
  0%,
  80%,
  100% {
    box-shadow: 0 0;
    height: 4em;
  }
  40% {
    box-shadow: 0 -2em;
    height: 5em;
  }
}
@keyframes load1 {
  0%,
  80%,
  100% {
    box-shadow: 0 0;
    height: 4em;
  }
  40% {
    box-shadow: 0 -2em;
    height: 5em;
  }
}


 .fade {
   opacity: 1;
   -webkit-transition: opacity 0.01s linear !important;
      -moz-transition: opacity 0.01s linear !important;
       -ms-transition: opacity 0.01s linear !important;
        -o-transition: opacity 0.01s linear !important;
           transition: opacity 0.01s linear !important;
 }
 

#unified-helper {
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
  display: inline-block;
  width: calc(100% - 680px);
  min-width: 300px;
  height: 100%;
  min-height: 600px;
  border-left: 1.25px solid #666;
  background: #F5F5F5;
  font-size: 0.925rem !important;
  padding: 8px;
  margin: 0px;
  overflow-y: auto;
  font-family: SelawikRegular, sans-serif;
  line-height: 1rem;
}

#unified-helper ul {
 font-size: 0.85rem;
}

#unified-helper > h5 {
 font-size: 1rem !important;
}

#unified-helper > h6 {
 font-size: 0.9rem !important;
}

#unified-reflow {
 width: 100%;
 height: 24px;
 font-size: 12px;
 background: #ED8;
 visibility: hidden;
 text-align: center;
 vertical-align:middle;
 padding-top: 2px;
}


#unified-steps {
    width: 140px;
    height: 100%;
    min-height: 650px;
    border-right: 1.25px solid #3339;
    background: #F5F5F5;
    padding-top: 20px;
    
    margin: 0px;
    text-align: center;
    display: inline-block;
    vertical-align:top;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
}


#unified-editor {
  display: inline-block;
  width: 540px;
  height: 100%;
  margin: 0;
  padding: 0;
  vertical-align: top;
  border: 1px inset #ECAD;
}

#unified-report {
 width: 100%;
 height: calc(100% - 24px);
 font-size: 11px;
 white-space: pre-wrap;
 overflow-wrap: normal;
 overflow-x: auto;
 font-family: monospace;
 font-size: 11px;
 padding: 4px;
 margin: 0px;
 border: none;
 resize: none;
 outline: none;
}

